update category and text
